Bug fixed and corrected ActivityForwardingView